# Calculator

./: .gitignore  Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  CalcWindow.cpp  CalcWindow.h  CalculatorContent.h  CalculatorEngine.h  CompilerWarnings.cmake  DrawResult.h  Dynamic.h  LICENSE  MathSymbol.h  MathSymbolButton.h  NumberButton.h  README.md  main.cpp  run.bat
